# jingle-jingle

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
src/: audit.rs  cli.rs  crypto.rs  genpass.rs  keyfile.rs  lib.rs  main.rs  model.rs  output.rs  paths.rs  redact.rs  totp.rs  vault.rs
src/commands/: audit_cmd.rs  crud.rs  egress.rs  init.rs  mod.rs  transfer.rs
tests/: audit.rs  crud.rs  exec.rs  redaction.rs  tamper.rs  totp.rs  transfer.rs
tests/common/: mod.rs
