[package]
name = "jingle"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Agent-native credential keychain: store and use secrets without them ever entering an agent's context"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frgmt0/jingle-jingle"
keywords = ["cli", "secrets", "keychain", "agents", "credentials"]
categories = ["command-line-utilities", "authentication"]

[lib]
name = "jingle"
path = "src/lib.rs"

[[bin]]
name = "jingle"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
base32 = "0.5"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
directories = "6"
getrandom = "0.3"
hkdf = "0.12"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["std", "formatting", "parsing", "serde-human-readable", "macros"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
